# soundex

./: CMakeLists.txt  README.md  SoundexTest.cpp  soundex.cpp  soundex.h
